--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -87,7 +87,7 @@
 
 
     <!-- Our Partners -->
-
+<!-- 
     <section class="homepage-partners">
         <div class="text"> We work with BEST partners</div>
         <div class="container">
@@ -115,94 +115,26 @@
                 </div>
             </div>
         </div>
-    </section>
-
-
-    <!-- Our Partners carousel -->
-    <!-- <section class="homepage-partners-carousel">
-        <div class="slider">
-            <div class="slide-track">
-                <div class="slide">
-                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
-                        alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-                </div>
-
-
-            </div>
-        </div>
-        </div>
     </section> -->
 
 
+    <section class="partners container">
+        <div class="text"> We work with BEST partners</div>
+        <div class="partners-carousel-new">
 
+            <div> <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt=""></div>
+            <div> <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png" alt="">
+            </div>
+            <div> <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png" alt=""></div>
+            <div> <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png"" alt=""></div>
+            <div> <img src="https://www.jaggaer.com/app/uploads/2020/10/rolls-royce-logo.png" alt=""></div>
+            <div> <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0" alt=""></div>
+            <div> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/VinFast_logo_%28simple_variant%29.svg/722px-VinFast_logo_%28simple_variant%29.svg.png" alt=""></div>
+            <div> <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt=""></div>
+
+
+        </div>
+    </section>
 
 
 
