--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1034,8 +1034,6 @@ body {
     }
 }
 
-
-
 @media (max-width: 640px) {
 
     /*************  HOME PAGE  ************/
@@ -1250,6 +1248,30 @@ body {
     }
 
 
+    
+    /* Partners */
+    .partners-carousel-new img{
+        width: 60px;
+        height: 60px;
+    }
+
+    .partners {
+        text-align: center;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+
+    
+    
+    .partners .text{
+        font-size: 25px;
+        margin-bottom: 30px;
+
+
+        
+    
+    }
+
 }
 
 @media (max-width: 430px) {
@@ -1362,8 +1384,6 @@ body {
     }
 
 }
-
-
 
 @media (max-width: 396px) {
 
