--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -25,11 +25,59 @@
     </section>
 
 
+    <!-- WHY US? -->
+    <section class="why-us">
+        <div class="container">
+            <div class="title">
+                <h5>WHY US?</h5>
+                <h1>What makes us different</h1>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-3 each-logo">
+                        <div class="logo"><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/try_mgll02.png"
+                                alt=""></div>
+                        <div class="text">Try an escooter before you buy it</div>
+                    </div>
+                    <div class="col-12 col-md-3 each-logo">
+                        <div class="logo"><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/ship_ldlj5r.png"
+                                alt=""></div>
+                        <div class="text">We ship on the day of your order</div>
+                    </div>
+                    <div class="col-12 col-md-3 each-logo">
+                        <div class="logo"><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/charity_d3hkkv.png"
+                                alt=""></div>
+                        <div class="text">Your purchase will help us to do good things</div>
+                    </div>
+                    <div class="col-12 col-md-3 each-logo">
+                        <div class="logo"><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/care_jtwart.png"
+                                alt=""></div>
+                        <div class="text">Max Care will take care of your escooter</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+
+
+    </section>
 
 
     <!-- Products preview -->
     <section class="homepage-products-preview">
-        <h2>Electronic Scooters</h2>
+        <div class="title">
+            <h5>OUR PRODUCTS</h5>
+            <h1>A choice for everyone</h1>
+        </div>
         <div class="container-fluid">
             <div class="row text-center ">
 
@@ -87,7 +135,7 @@
 
 
     <!-- Our Partners -->
-<!-- 
+    <!-- 
     <section class="homepage-partners">
         <div class="text"> We work with BEST partners</div>
         <div class="container">
@@ -125,11 +173,17 @@
             <div> <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt=""></div>
             <div> <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png" alt="">
             </div>
-            <div> <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png" alt=""></div>
+            <div> <img
+                    src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
+                    alt=""></div>
             <div> <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png"" alt=""></div>
-            <div> <img src="https://www.jaggaer.com/app/uploads/2020/10/rolls-royce-logo.png" alt=""></div>
-            <div> <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0" alt=""></div>
-            <div> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/VinFast_logo_%28simple_variant%29.svg/722px-VinFast_logo_%28simple_variant%29.svg.png" alt=""></div>
+            <div> <img src=" https://www.jaggaer.com/app/uploads/2020/10/rolls-royce-logo.png" alt=""></div>
+            <div> <img
+                    src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
+                    alt=""></div>
+            <div> <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/VinFast_logo_%28simple_variant%29.svg/722px-VinFast_logo_%28simple_variant%29.svg.png"
+                    alt=""></div>
             <div> <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt=""></div>
 
 
