--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,7 +2,7 @@
 body {
     /* background-image: url('https://i02.appmifile.com/mi-com-product/fly-birds/xiaomi-electric-scooter-4-go/pc/fef33f3db7efa457e1d8584d02b13d5f.jpg?f=webp'); */
     background-color: #f3f3f3;
-
+    font-family: 'Montserrat';
 
 }
 
@@ -102,9 +102,70 @@ body {
 
 }
 
+/* Why Us? */
+.why-us {
+    padding-top: 50px;
+    padding-bottom: 80px;
+    margin-bottom: 30px;
+}
 
+
+.why-us .title {
+    text-align: center;
+}
+
+.why-us h5 {
+    padding-bottom: 10px;
+}
+
+.why-us h1 {
+    font-weight: bold;
+    padding-bottom: 20px
+}
+
+.why-us .each-logo {
+    display: flex;
+    flex-direction: row;
+}
+
+.why-us .each-logo .text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
+.why-us .each-logo .logo {
+    padding: 20px;
+}
+
+.why-us .each-logo img {
+    width: 100px;
+}
 
 /* Products list */
+
+
+.homepage-products-preview {
+
+    padding-top: 50px;
+    padding-bottom: 80px;
+    margin-bottom: 30px;
+}
+
+
+.homepage-products-preview .title {
+    text-align: center;
+}
+
+.homepage-products-preview h5 {
+    padding-bottom: 10px;
+}
+
+.homepage-products-preview h1 {
+    font-weight: bold;
+    padding-bottom: 20px
+}
 
 .homepage-products-preview {
     margin: 0%;
@@ -143,32 +204,34 @@ body {
 
 .partners {
     text-align: center;
-    padding-bottom: 40px;
-    padding-top: 40px;
+    padding-top: 50px;
+    padding-bottom: 80px;
+    margin-bottom: 30px;
+
 }
 
-.partners .slick-slide{
+.partners .slick-slide {
     display: flex;
     justify-content: center;
 }
 
 
-.partners .text{
+.partners .text {
     font-size: 40px;
     margin-bottom: 50px;
     font-weight: 600;
-    
+
 
 }
 
 
-.partners-carousel-new{
-    display:flex;
+.partners-carousel-new {
+    display: flex;
     justify-content: center;
 }
 
 
-.partners-carousel-new{
+.partners-carousel-new {
     display: flex;
     justify-content: center;
 
@@ -176,111 +239,21 @@ body {
 
 
 
-.partners-carousel-new img{
+.partners-carousel-new img {
     width: 160px;
     height: 160px;
 }
 
 
 
-/* Collage of pics */
 
-.homepage-collage {
-    text-align: center;
-    padding: 20px;
-}
-
-.homepage-collage h5 {
-    padding-top: 15px;
-
-}
-
-
-.rows {
-    margin: 5%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    justify-content: space-between;
-
-}
-
-.column {
-    flex: 1;
-    margin-right: 15px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: space-evenly;
-
-
-}
-
-.column img {
-    width: 100%;
-    display: block;
-    margin-bottom: auto;
-    margin-top: auto;
-}
-
-.rows .column img:first-child {
-    margin-top: 0;
-}
-
-.rows .column img:last-child {
-    margin-bottom: 0;
-}
-
-/* Light the way */
-.product-details-lights {
-    display: flex;
-    flex-direction: column;
-    margin-top: 60px;
-    margin-bottom: 60px;
-}
-
-.product-details-lights .image-container {
-    display: flex;
-    justify-content: center;
-    /* height: 70%;
-    width: 70%; */
-}
-
-
-.product-details-lights .image-container img {
-    padding: 10px;
-    width: 40%;
-    height: 100%;
-    border-radius: 18px;
-}
-
-
-.product-details-lights .text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.product-details-lights .text .head,
-.product-details-lights .text .description {
-    width: 50%;
-}
-
-.product-details-lights .text .head {
-    font-size: 45px;
-    font-weight: bold;
-    margin-bottom: 50px;
-}
-
-.product-details-lights .text .description {
+/* Customer reviews - Slick carousel */
+/* Defines the width of the carousel and centers it on the page */
+.homepage-customer-reviews{
+    padding-bottom: 80px;
     margin-bottom: 30px;
 }
 
-/* Slick carousel */
-/* Defines the width of the carousel and centers it on the page */
 .homepage-customer-reviews .slick-carousel-customer-reviews {
     margin: 0 auto;
     width: 90%;
@@ -487,7 +460,6 @@ body {
 
 /* MUKUTA 10 plus*/
 
-
 /* Carousel for Product Details*/
 
 
@@ -623,7 +595,54 @@ body {
 }
 
 
-/* Owl carousel */
+/* Light the way */
+.product-details-lights {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.product-details-lights .image-container {
+    display: flex;
+    justify-content: center;
+    /* height: 70%;
+    width: 70%; */
+}
+
+
+.product-details-lights .image-container img {
+    padding: 10px;
+    width: 40%;
+    height: 100%;
+    border-radius: 18px;
+}
+
+
+.product-details-lights .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.product-details-lights .text .head,
+.product-details-lights .text .description {
+    width: 50%;
+}
+
+.product-details-lights .text .head {
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.product-details-lights .text .description {
+    margin-bottom: 30px;
+}
+
+/* 3 pics - Owl carousel */
 .product-details-owl-carousel .text-container {
     text-align: center;
     display: flex;
@@ -932,8 +951,58 @@ body {
 
 
 
+/*************  ABOUT US ************/
 
 
+
+/* Collage of pics */
+
+.homepage-collage {
+    text-align: center;
+    padding: 20px;
+}
+
+.homepage-collage h5 {
+    padding-top: 15px;
+
+}
+
+
+.rows {
+    margin: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content: space-between;
+
+}
+
+.column {
+    flex: 1;
+    margin-right: 15px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+
+
+}
+
+.column img {
+    width: 100%;
+    display: block;
+    margin-bottom: auto;
+    margin-top: auto;
+}
+
+.rows .column img:first-child {
+    margin-top: 0;
+}
+
+.rows .column img:last-child {
+    margin-bottom: 0;
+}
 
 
 
@@ -1009,11 +1078,11 @@ body {
     }
 
     /* 6pics layout */
-    #card1{
+    #card1 {
         border-radius: 0;
     }
-    
-    #img1{
+
+    #img1 {
         border-radius: 0;
     }
 
@@ -1022,13 +1091,15 @@ body {
     }
 
 
-    #card4{
+    #card4 {
         border-radius: 0;
     }
+
     #img4-1 {
         order: -1;
     }
-    #img4{
+
+    #img4 {
         border-radius: 0;
 
     }
@@ -1248,9 +1319,9 @@ body {
     }
 
 
-    
+
     /* Partners */
-    .partners-carousel-new img{
+    .partners-carousel-new img {
         width: 60px;
         height: 60px;
     }
@@ -1261,15 +1332,15 @@ body {
         padding-top: 20px;
     }
 
-    
-    
-    .partners .text{
+
+
+    .partners .text {
         font-size: 25px;
         margin-bottom: 30px;
 
 
-        
-    
+
+
     }
 
 }
@@ -1361,7 +1432,7 @@ body {
 
 
     /* Partners */
-    .partners-carousel-new img{
+    .partners-carousel-new img {
         width: 80px;
         height: 80px;
     }
@@ -1372,15 +1443,15 @@ body {
         padding-top: 20px;
     }
 
-    
-    
-    .partners .text{
+
+
+    .partners .text {
         font-size: 25px;
         margin-bottom: 30px;
 
 
-        
-    
+
+
     }
 
 }
