--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,13 @@ body {
 
 }
 
+/* .btn{
+    background-color: #FFCF00 !important;
+    color: black  !important;
+    border: #FFCF00 !important;
+} */
+
+
 /**************** NAV BAR *****************/
 /* .navbar {
     background-color: #f5ebebec !important;
@@ -145,7 +152,6 @@ body {
 
 /* Products list */
 
-
 .homepage-products-preview {
 
     padding-top: 50px;
@@ -197,9 +203,70 @@ body {
     align-items: center;
 }
 
+
+
+
+/* OUR OWN TESTING */
+
+.homepage-our-testing .icons-text .card {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 98%;
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.2) ;
+}
+
+
+
+/* .homepage-our-testing .icons-text .col-6 :hover{
+    transform: scale(1.1);
+    transition: transform .15s ease-in-out;
+} */
+
+.homepage-our-testing .icons-text .card .card-body{
+    padding:0;
+    padding-top: 10px
+}
+
+.homepage-our-testing .icons-text .card .card-body .card-title {
+    font-size: 18;
+    font-weight: bold;
+    line-height: 125%;
+    hyphens: auto;
+
+}
+
+.homepage-our-testing .icons-text .card .card-body .card-text {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 23px;
+    hyphens: auto;
+
+}
+
+
+.homepage-our-testing .icons-text img {
+    height: 60px;
+    width: 60px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Partners */
-
-
 /* Testing new partners carousel */
 
 .partners {
@@ -249,7 +316,7 @@ body {
 
 /* Customer reviews - Slick carousel */
 /* Defines the width of the carousel and centers it on the page */
-.homepage-customer-reviews{
+.homepage-customer-reviews {
     padding-bottom: 80px;
     margin-bottom: 30px;
 }
@@ -360,6 +427,7 @@ body {
 
 .homepage-find-us .head h1 {
     padding-bottom: 10px;
+    font-weight: bold;
 }
 
 
@@ -948,7 +1016,29 @@ body {
 
 /*************  NAV BAR  ************/
 
+.navbar {
+    padding: 0 !important;
 
+}
+
+.navbar .navbar-brand img {
+    width: 40px;
+    height: 40px
+}
+
+
+
+
+
+/*************  FOOTER  ************/
+.footer .logo img {
+    width: 25px;
+    height: 25px
+}
+
+.footer a {
+    text-decoration: none;
+}
 
 
 /*************  ABOUT US ************/
@@ -1025,12 +1115,72 @@ body {
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 880px) {
 
 
     /* /************  HOME PAGE ************/
 
+    /* Hero page */
+    .homepage-hero .body {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 60%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        text-align: center;
+        background: rgba(0, 0, 0, 0);
+        /* You can adjust the background color and opacity */
+        color: black;
+        /* Text color */
+        padding: 5px;
+        /* Add padding to the text */
+        box-sizing: border-box;
+    }
 
+
+    .homepage-hero .body .brand {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        height: 50%;
+    }
+
+    .homepage-hero .body .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 40%;
+        width: 80%;
+        text-align: left;
+    }
+
+    .homepage-hero .body .text .title {
+        font-size: 25px;
+        padding-bottom: 15px;
+    }
+
+    .homepage-hero .body .text .description {
+        width: 80%;
+        font-size: 13px;
+    }
+
+    .homepage-hero .body .text .btn {
+        margin-top: 10px;
+        /* width: 10px;
+height: 50%; */
+
+        width: 40%;
+
+        white-space: nowrap;
+        font-size: 12px;
+        font-weight: bold;
+        text-align: center;
+
+    }
 
 
     .homepage-products-preview {
@@ -1259,6 +1409,38 @@ body {
 
 }
 
+
+@media (max-width: 552px) {
+    /* Hero page */
+
+
+    .homepage-hero .body .text .title {
+        font-size: 18px;
+        padding-bottom: 15px;
+        width: 80%;
+
+    }
+
+    .homepage-hero .body .text .description {
+        width: 90%;
+        font-size: 12px
+    }
+
+    .homepage-hero .body .text .btn {
+        margin-top: 8px;
+
+        width: 40%;
+
+        white-space: nowrap;
+        font-size: 10px;
+        font-weight: bold;
+        text-align: center;
+
+    }
+
+}
+
+
 @media (max-width: 500px) {
 
     /* Hero page */
@@ -1345,7 +1527,8 @@ body {
 
 }
 
-@media (max-width: 430px) {
+
+@media (max-width: 460px) {
 
     /* Hero page */
     .homepage-hero .body {
