--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
+<footer class="text-center text-lg-start bg-light text-muted footer">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-start justify-content-lg-start p-4 border-bottom">
       <!-- Left -->
@@ -9,17 +9,22 @@
       <!-- Left -->
   
       <!-- Right -->
-      <div sty>
+      <div class="logo">
         <a href="https://www.facebook.com/vjeetscooter/" class="me-4 text-reset">
-          <img  src="/images/footer/facebook.png" alt="" style="width:20px; height:20px ;">
+          <img  src="/images/footer/facebook.png" alt="" > Facebook
         </a>
-        <a href="" class="me-4 text-reset">
-            <img  src="/images/footer/instagram.png" alt="" style="width:20px; height:20px ;">
-        </a>
-        <a href="" class="me-4 text-reset">
-            <img  src="/images/footer/twitter.png" alt="" style="width:20px; height:20px">
+        <a href="https://www.tiktok.com/@vetescooter?fbclid=IwAR3dnxim-lxrItljgDx1rY3TqK8ju-YnD19VUdOkf_75s-M0MucjVt1ot7s" class="me-4 text-reset">
+          <img  src="/images/footer/video.png" alt="" > Tik-Tok
 
-        </a>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <img  src="/images/footer/youtube.png" alt="" > Youtube
+
+    </a>
+        <!-- <a href="" class="me-4 text-reset">
+            <img  src="/images/footer/instagram.png" alt="" > Instagram
+        </a> -->
+
       </div>
       <!-- Right -->
     </section>
