--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar mb-0 sticky-top navbar-expand-lg navbar-dark bg-dark" >
   <div class="container-fluid ">
-    <a class="navbar-brand" href="/home">VET</a>
+    <a class="navbar-brand" href="/home"><img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696650759/VetStore/nav-bar/logo-PhotoRoom_1_hk17cp.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
