--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -14,7 +14,7 @@
                         electric scooters for homes and businesses
                     </div>
                     <a href="https://www.facebook.com/vjeetscooter/">
-                        <div class="btn btn-success"> Contact Us!
+                        <div class="btn btn-warning"> Contact Us!
 
                         </div>
                     </a>
@@ -56,7 +56,7 @@
                         <div class="logo"><img
                                 src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696608915/VetStore/homepage/care_jtwart.png"
                                 alt=""></div>
-                        <div class="text">Max Care will take care of your escooter</div>
+                        <div class="text">Vet Care will take care of your escooter</div>
                     </div>
                 </div>
 
@@ -132,6 +132,103 @@
 
         </div>
     </section>
+
+
+    <!-- Our Own Testing -->
+    <!-- <section class="homepage-our-testing">
+        <div class="container video-text-icons">
+            <div class="row video-text">
+                <div class="col-md-6">
+                    <iframe
+                        src="https://www.youtube.com/embed/SKJeqRkPLco?showinfo=0&autoplay=1&mute=1&enablejsapi=1&loop=1&playlist=SKJeqRkPLco"></iframe>
+                </div>
+                <div class="col-md-6">
+                    <h5>We do our own testing</h5>
+                    <h1>We present real parameters</h1>
+                    <p>We do what others don't. For our products, you will find <span> independently measured
+                            specs</span>. You don't have to rely on manufacturers' marketing claims, but you have <span>
+                            objective mileage, performance, acceleration, or braking data</span>. All this is measured
+                        by professional technology and our test driver.</p>
+                </div>
+            </div>
+            <div class="row icons-text">
+
+                <div class="col-6 col-md-2">
+                    <div class="card">
+                        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696666012/VetStore/homepage/our-own-testing/5-PhotoRoom_fwexqp.png"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="card-title">Maximal speed</div>
+                            <div class="card-text">Measurement with high accuracy on the surface.</div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-6 col-md-2">
+                    <div class="card">
+                        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696666012/VetStore/homepage/our-own-testing/6-PhotoRoom_qrskag.png"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="card-title">Acceleration</div>
+                            <div class="card-text">Measurement from two perspectives - according to speed over time
+                                and distance over time</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-2">
+                    <div class="card">
+                        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696666011/VetStore/homepage/our-own-testing/7-PhotoRoom_fdh50x.png"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="card-title">Braking distance</div>
+                            <div class="card-text">We always measure by braking sharply from the maximum speed of the
+                                escooter.</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-2">
+                    <div class="card">
+                        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696666012/VetStore/homepage/our-own-testing/8-PhotoRoom_fwvqfm.png"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="card-title">Maximum range</div>
+                            <div class="card-text">A fair test verifies the information provided by the manufacturer
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-6 col-md-2">
+                    <div class="card">
+                        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696666012/VetStore/homepage/our-own-testing/9-PhotoRoom_s9i7zs.png"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="card-title">Ride in the city</div>
+                            <div class="card-text">Our own test close to the real use of a scooter</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-2">
+                    <div class="card">
+                        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696666012/VetStore/homepage/our-own-testing/10-PhotoRoom_h3jjqv.png"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div class="card-title">Performance</div>
+                            <div class="card-text">The most complex test of all. We measure the maximum power of the
+                                engine and also its course.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section> -->
+
 
 
     <!-- Our Partners -->
@@ -435,16 +532,16 @@
 
         <div class="head">
             <h1>Come Visit Us!</h1>
-            <h5>And drive away with your new ride!</h5>
-        </div>
-        <!-- <div class="info">
+            <div>And drive away with your new ride!</h5>
+            </div>
+            <!-- <div class="info">
             <div class="email">info@vetscooter.com</div>
             <div class="address">Cau Giay, Hanoi, Vietnam </div>
             <div class="phone">+84 98168193</div>
         </div> -->
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.6407347704744!2d105.7963607163286!3d21.047056408657042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab3b3542b66f%3A0xe391f4243d2d661e!2zOCBOZy4gMzYgSG_DoG5nIFF14buRYyBWaeG7h3QsIE5naMSpYSDEkMO0LCBD4bqndSBHaeG6pXksIEjDoCBO4buZaSwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1694272518579!5m2!1sen!2s"
-            width="800" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.6407347704744!2d105.7963607163286!3d21.047056408657042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab3b3542b66f%3A0xe391f4243d2d661e!2zOCBOZy4gMzYgSG_DoG5nIFF14buRYyBWaeG7h3QsIE5naMSpYSDEkMO0LCBD4bqndSBHaeG6pXksIEjDoCBO4buZaSwgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1694272518579!5m2!1sen!2s"
+                width="800" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </section>
